Mosip 8292 - Move Auth Type Status Storage and Retrieval services from IDA to ID Repo including DB changes (#23)
* [MOSIP-8768] Updated bioextractor pkg and integrated extraction format

* [MOSIP-8768] moved bio extractor req and response to core

* [MOSIP-8768] updated test cases

* [MOSIP-8292] added auth type status changes

* [MOSIP-8293] integrated auth type status changes

* [MOSIP-8293] updated audit

* [MOSIP-8293] updated vid service impl

* [MOSIP-8293] removed unused imports

* [MOSIP-8293] updated pom

* [MOSIP-8293] updated test cases

* [MOSIP-8293] updated test cases

* [MOSIP-8293] removed unwanted bioextracter classes

* [MOSIP-8293] updated test cases

* [MOSIP-8293] updated test cases

* [MOSIP-8293] updated error constants

* [MOISP-8293] moved bioreq and res dto to idrepo core

* [MOSIP-8293] updated authtypelock entity

* [MOSIP-8293] commented bio extractor test cases

* [MOSIP-8293] uncommented test cases