@@ -1,6 +1,7 @@
 package io.mosip.bioextractor.controller;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Before;
@@ -9,7 +10,6 @@ import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestContext;
@@ -20,12 +20,11 @@ import org.springframework.validation.Errors;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.context.WebApplicationContext;
 
-import io.mosip.bioextractor.controller.BiometricExtractorController;
-import io.mosip.bioextractor.dto.BioExtractRequestDTO;
-import io.mosip.bioextractor.dto.BioExtractResponseDTO;
 import io.mosip.bioextractor.service.helper.BioExtractionHelper;
 import io.mosip.bioextractor.service.impl.BiometricExtractionServiceImpl;
 import io.mosip.bioextractor.validator.BiometricExtractionRequestValidator;
+import io.mosip.idrepository.core.dto.BioExtractRequestDTO;
+import io.mosip.idrepository.core.dto.BioExtractResponseDTO;
 import io.mosip.kernel.biosdk.provider.factory.BioAPIFactory;
 import io.mosip.kernel.biosdk.provider.spi.iBioProviderApi;
 import io.mosip.kernel.core.cbeffutil.entity.BDBInfo;
@@ -83,7 +82,7 @@ public class BiometricExtractorControllerTest {
 		
 		Mockito.when(cbeffUtil.getBIRDataFromXML(Mockito.any())).thenReturn((List<BIRType>) Mockito.mock(List.class));
 		List<BIR> listBir = new ArrayList<>();
-		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(List.of(SingleType.FINGER)).build()).build();
+		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(Collections.singletonList(SingleType.FINGER)).build()).build();
 		listBir.add(bir);
 		Mockito.when(cbeffUtil.convertBIRTypeToBIR(Mockito.any())).thenReturn(listBir);
 		
